--- a/packages/theme-patternfly-org/templates/mdx.css
+++ b/packages/theme-patternfly-org/templates/mdx.css
@@ -1,5 +1,6 @@
 #nav-content {
-  padding: var(--pf-global--spacer--xl) var(--pf-global--spacer--xl) 0 var(--pf-global--spacer--xl);
+  background-color: var(--pf-c-page__main-nav--BackgroundColor);
+  padding-bottom: 0;
 }
 
 #ws-page-content-router {
@@ -12,15 +13,8 @@
   flex-grow: 1;
 }
 
-@media (max-width: 767px) {
-  #ws-page-content-router > section:first-child {
-    padding: 16px;
-  }
-}
-
 #main-content {
   flex: 1;
-  padding: 0;
   background-color: var(--pf-global--BackgroundColor--light-200);
 }
 
@@ -306,7 +300,6 @@
 
 .ws-mdx-content {
   flex-grow: 1;
-  padding: var(--pf-global--spacer--xl);
 }
 
 /* Design asked for this. A nice side effect is that the TOC doesn't "jump" between pages */
